next
----
-genewise2legacydb.pl: now accepts a password file
-snap: output filenames now include the component name
-unreported bugfix: fixed off-by-one error in legacy genemark2bsml.pl
-added 'samples' directory for use in training and pipeline testing
-new component: RNAmmer, predicts ribosomal genes in genomic sequences
-new component: 454_mplex_seq_bin_trim, a binning and trimming script for multiplex 454 sequence data
-bug #2142533: corrected File::Find options for proper functioning on NFS
-src/perl: added script_template.pl as a template for people adding perl scripts to Ergatis
-documentation: added pipeline creation tutorial to interface
-bsml2chado: PostgreSQL chado ddls corrected to prevent failure in createindex step
-ps_scan: added --pfscan and --psa2msa options to include paths to the respective binaries. Also added $;PFSCAN$; and $;PSA2MSA$; variables to default software config.
-predict_prokaryotic_gene_function: minor name processing updates
-MSF2Bsml.pl: fixed bug whereby id "repair" was mangling non-truncated new style ('.'-delimited) ids.
-updates to the pangenome component. sampling procedure that simplifies output from large pan genome runs
-added integrated JOCs,pangenome saved pipeline
-start_site_curation: fixed bug to correctly assign a start site frequency of 0 to start sites that don't occur.
-new component: gff3_to_fasta.pl, Extracts fasta sequences from a gff3 file for a provided feature type (part of Annotation Evaluation Pipeline)
-new component: gff3_to_annotab.pl, Extracts tabular annotation information for a provided feature type (part of Annotation Evaluation Pipeline)
-new component: tabula_rasa, Allows a user-input command to be run as an iterator on an input file/list/dir
-new component: phylip_dnadist, a wrapper for a parallelized version of PHYLIP's dnadist
-moved RDP and STAP components into a generic 'phylogeny' component group