@@ -27,6 +27,7 @@ $;HMMREPORT_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.hmmreport.li
 $;COMPONENT_NAME$; = RNAmmer
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
+$;PROJECT_ABBREVIATION$; = $;PROJECT$;
 
 ;The version,revision,tag here is set by an interpolated CVS tag
 $;VERSION$; = 1.2
